finish header and description section for mobile

--- a/index.html
+++ b/index.html
@@ -13,17 +13,91 @@
     <link rel="stylesheet" href="./src/output.css" />
     <title>Frontend Mentor | Workit landing page</title>
   </head>
-  <body>
-    Apply for access Data tailored to your needs. Learn more 1 Actionable
-    insights Optimize your products, improve customer satisfaction and stay
-    ahead of the competition with our product data analytics. 2 Data-driven
-    decisions Make data-driven decisions with our product data analytics. Our
-    AI-generated reports help you unlock insights hidden in your product data. 3
-    Always affordable Always affordable pricing that scales with your business.
-    Get top-quality product data analytics services without hidden costs or
-    unexpected fees. Be the first to test Hi, I'm Louis Graham, the founder of
-    the company. Book a demo call with me to become a beta tester for our app
-    and kickstart your company. Apply for access below and I’ll be in touch to
-    schedule a call. Apply for access
+  <body class="bg-ghost-white">
+    <header
+      class="bg-dark-purple px-4 pt-9 text-center text-white min-h-[481.707px] max-h-[730px] relative curved z10"
+    >
+      <nav class="flex items-center justify-between mb-16">
+        <h1 class=""><img src="./images/logo-light.svg" alt="logo" /></h1>
+        <a
+          href="#"
+          class="font-manrope text-base font-bold leading-8 tracking-[-0.16px] border-b-[3px] border-eucaplyptus hover:text-eucaplyptus transition-colors"
+          >Apply for access</a
+        >
+      </nav>
+      <h2 class="font-fraunces text-[46px] font-semibold leading-[50px] mb-10">
+        Data
+        <span class="border-b-[3px] border-eucaplyptus pb[-1px]">tailored</span>
+        to your needs.
+      </h2>
+      <a
+        href="#"
+        class="px-6 py-3 bg-eucaplyptus text-dark-purple text-base leading-8 tracking-[-0.16px] font-bold font-manrope border-2 border-eucaplyptus hover:text-eucaplyptus hover:bg-dark-purple transition-all"
+        >Learn more</a
+      >
+      <img
+        src="./images/image-hero.webp"
+        alt="image hero"
+        class="max-w-[298.305px] absolute top-[410px] left-1/2 -translate-x-1/2 z-20"
+      />
+    </header>
+
+    <main class="px-4">
+      <section
+        class="pt-40 pb-[72px] relative curved flex flex-col items-center gap-10 text-dark-purple text-center font-fraunces"
+      >
+        <div class="flex flex-col items-center">
+          <p
+            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center mb-6 text-xl font-semibold leading-9"
+          >
+            1
+          </p>
+          <h3 class="text-[28px] font-semibold leading-9 mb-4">
+            Actionable insights
+          </h3>
+          <p class="text-davys-grey font-manrope text-base leading-7">
+            Optimize your products, improve customer satisfaction and stay ahead
+            of the competition with our product data analytics.
+          </p>
+        </div>
+        <!-- one description -->
+        <div class="flex flex-col items-center">
+          <p
+            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center mb-6 text-xl font-semibold leading-9"
+          >
+            2
+          </p>
+          <h3 class="text-[28px] font-semibold leading-9 mb-4">
+            Data-driven decisions
+          </h3>
+          <p class="text-davys-grey font-manrope text-base leading-7">
+            Make data-driven decisions with our product data analytics. Our
+            AI-generated reports help you unlock insights hidden in your product
+            data.
+          </p>
+        </div>
+        <!-- one description -->
+        <div class="flex flex-col items-center">
+          <p
+            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center mb-6 text-xl font-semibold leading-9"
+          >
+            3
+          </p>
+          <h3 class="text-[28px] font-semibold leading-9 mb-4">
+            Always affordable
+          </h3>
+          <p class="text-davys-grey font-manrope text-base leading-7">
+            Always affordable pricing that scales with your business. Get
+            top-quality product data analytics services without hidden costs or
+            unexpected fees.
+          </p>
+        </div>
+        <!-- one description -->
+      </section>
+      Be the first to test Hi, I'm Louis Graham, the founder of the company.
+      Book a demo call with me to become a beta tester for our app and kickstart
+      your company. Apply for access below and I’ll be in touch to schedule a
+      call. Apply for access
+    </main>
   </body>
 </html>
