--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="./src/output.css" />
     <title>Frontend Mentor | Workit landing page</title>
   </head>
-  <body class="bg-ghost-white">
+  <body>
     <header
-      class="bg-dark-purple px-4 pt-9 text-center text-white min-h-[481.707px] max-h-[730px] relative curved z10"
+      class="bg-dark-purple px-4 pt-9 text-center text-white min-h-[481.707px] max-h-[730px] relative curved"
     >
       <nav class="flex items-center justify-between mb-16">
         <h1 class=""><img src="./images/logo-light.svg" alt="logo" /></h1>
@@ -42,62 +42,101 @@
       />
     </header>
 
-    <main class="px-4">
+    <main class="mb-[74px]">
       <section
-        class="pt-40 pb-[72px] relative curved flex flex-col items-center gap-10 text-dark-purple text-center font-fraunces"
+        class="bg-ghost-white pt-40 px-4 pb-[72px] relative curved flex flex-col items-center gap-10 text-dark-purple text-center font-fraunces"
       >
-        <div class="flex flex-col items-center">
+        <div class="flex flex-col items-center gap-6">
           <p
-            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center mb-6 text-xl font-semibold leading-9"
+            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center text-xl font-semibold leading-9"
           >
             1
           </p>
-          <h3 class="text-[28px] font-semibold leading-9 mb-4">
-            Actionable insights
-          </h3>
-          <p class="text-davys-grey font-manrope text-base leading-7">
-            Optimize your products, improve customer satisfaction and stay ahead
-            of the competition with our product data analytics.
-          </p>
+          <div class="flex flex-col items-center gap-4">
+            <h3 class="text-[28px] font-semibold leading-9">
+              Actionable insights
+            </h3>
+            <p class="text-davys-grey font-manrope text-base leading-7">
+              Optimize your products, improve customer satisfaction and stay
+              ahead of the competition with our product data analytics.
+            </p>
+          </div>
         </div>
         <!-- one description -->
-        <div class="flex flex-col items-center">
+        <div class="flex flex-col items-center gap-6">
           <p
-            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center mb-6 text-xl font-semibold leading-9"
+            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center text-xl font-semibold leading-9"
           >
             2
           </p>
-          <h3 class="text-[28px] font-semibold leading-9 mb-4">
-            Data-driven decisions
-          </h3>
-          <p class="text-davys-grey font-manrope text-base leading-7">
-            Make data-driven decisions with our product data analytics. Our
-            AI-generated reports help you unlock insights hidden in your product
-            data.
-          </p>
+          <div class="flex flex-col items-center gap-4">
+            <h3 class="text-[28px] font-semibold leading-9">
+              Data-driven decisions
+            </h3>
+            <p class="text-davys-grey font-manrope text-base leading-7">
+              Make data-driven decisions with our product data analytics. Our
+              AI-generated reports help you unlock insights hidden in your
+              product data.
+            </p>
+          </div>
         </div>
         <!-- one description -->
-        <div class="flex flex-col items-center">
+        <div class="flex flex-col items-center gap-6">
           <p
-            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center mb-6 text-xl font-semibold leading-9"
+            class="border-[1px] border-davys-grey rounded-[30.5px] w-12 h-[46px] flex items-center justify-center text-xl font-semibold leading-9"
           >
             3
           </p>
-          <h3 class="text-[28px] font-semibold leading-9 mb-4">
-            Always affordable
-          </h3>
-          <p class="text-davys-grey font-manrope text-base leading-7">
-            Always affordable pricing that scales with your business. Get
-            top-quality product data analytics services without hidden costs or
-            unexpected fees.
-          </p>
+          <div class="flex flex-col items-center gap-4">
+            <h3 class="text-[28px] font-semibold leading-9">
+              Always affordable
+            </h3>
+            <p class="text-davys-grey font-manrope text-base leading-7">
+              Always affordable pricing that scales with your business. Get
+              top-quality product data analytics services without hidden costs
+              or unexpected fees.
+            </p>
+          </div>
         </div>
         <!-- one description -->
       </section>
-      Be the first to test Hi, I'm Louis Graham, the founder of the company.
-      Book a demo call with me to become a beta tester for our app and kickstart
-      your company. Apply for access below and I’ll be in touch to schedule a
-      call. Apply for access
+
+      <section class="bg-white pt-[100px] px-4">
+        <img
+          src="./images/image-founder.webp"
+          alt="image founder"
+          class="size-[281px] relative left-1/2 -translate-x-1/2 -bottom-[55px]"
+        />
+        <div
+          class="min-w-[343px] max-w-[730px] bg-dark-purple p-8 text-center text-white overflow-hidden relative z-10"
+        >
+          <h3
+            class="font-fraunces text-[32px] font-semibold leading-[48px] mb-4"
+          >
+            Be the first to test
+          </h3>
+          <p class="text-center font-manrope text-base leading-7 pb-7">
+            Hi, I'm Louis Graham, the founder of the company. Book a demo call
+            with me to become a beta tester for our app and kickstart your
+            company. Apply for access below and I’ll be in touch to schedule a
+            call.
+          </p>
+          <a
+            href="#"
+            class="px-6 py-3 bg-eucaplyptus text-dark-purple text-base leading-8 tracking-[-0.16px] font-bold font-manrope border-2 border-eucaplyptus hover:text-eucaplyptus hover:bg-dark-purple transition-all"
+            >Apply for access</a
+          >
+        </div>
+      </section>
     </main>
+
+    <footer class="flex flex-col items-center gap-16 pb-16">
+      <img src="./images/logo-dark.svg" alt="logo dark" />
+      <div class="flex items-center gap-7">
+        <img src="./images/icon-facebook.svg" alt="icon facebook" />
+        <img src="./images/icon-twitter.svg" alt="icon twitter" />
+        <img src="./images/icon-instagram.svg" alt="icon instagram" />
+      </div>
+    </footer>
   </body>
 </html>
